[tool.poetry]
name = "tyred"
version = "0.1.0"
description = ""
authors = ["Thomas Cranny <tkcranny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.19.0"
jupyterlab = "^3.0.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.2.1"
black = "^20.8b1"

[tool.isort]
src_paths = ["tyred", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
